compile-gateway/k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: compilev2-gateway
  namespace: linklab
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: compilev2-gateway
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: compilev2-gateway
    namespace: linklab
spec:
    replicas: 1
    selector:
      matchLabels:
        app: compilev2-gateway
    template:
      metadata:
        labels:
          app: compilev2-gateway
      spec:
        containers: 
        - name: gateway
          image: registry.cn-hangzhou.aliyuncs.com/linklab/compile-gateway:v2.1-beta
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
          - name: compilev2-gateway-config-volume
            mountPath: /app/config
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
        volumes:
        - name: compilev2-gateway-config-volume
          configMap:
            name: compilev2-gateway-config
        imagePullSecrets:
          - name: linklab-aliyun
